Add Command lib

--- a/src/ILVisualizer.Bot/ILVisualizer.Bot.csproj
+++ b/src/ILVisualizer.Bot/ILVisualizer.Bot.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\ILVisualizer.Application\ILVisualizer.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Modules\" />
+  </ItemGroup>
+
 </Project>
