--- a/src/ILVisualizer.Bot/ILVisualizer.Bot.csproj
+++ b/src/ILVisualizer.Bot/ILVisualizer.Bot.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="Finite.Commands.Core" Version="0.3.1-alpha.860570300" />
 		<PackageReference Include="Finite.Commands.Models.AttributedModel" Version="0.3.1-alpha.860570300" />
 		<PackageReference Include="Finite.Commands.Parsing.Positional" Version="0.3.1-alpha.860570300" />
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
 	</ItemGroup>
 
 </Project>
