--- a/src/ILVisualizer.Docker/docker-compose.yml
+++ b/src/ILVisualizer.Docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: ${DOCKER_REGISTRY-}ilvisualizerbot
     restart: always
     env_file:
-        - .env
+        - ../../.env
     build:
-      context: .
+      context: ../../
       dockerfile: src/ILVisualizer.Bot/Dockerfile
