--- a/src/ILVisualizer.Bot/ILVisualizer.Bot.csproj
+++ b/src/ILVisualizer.Bot/ILVisualizer.Bot.csproj
@@ -4,6 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+	  <RestoreAdditionalProjectSources>
+		  https://nuget.emzi0767.com/api/v3/index.json;
+		  https://www.myget.org/F/finitereality/api/v3/index.json
+	  </RestoreAdditionalProjectSources>
   </PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
